# etcd-manager

./: .gcloudignore  .gitignore  .ko.yaml  .shipbot.yaml  BUILD  Makefile  OWNERS  SECURITY_CONTACTS  cloudbuild.yaml  go.mod  go.sum  version.txt
.github/workflows/: bazel.yml  ko.yml  main.yml  tag-release.yml
cmd/etcd-backup/: BUILD.bazel  main.go
cmd/etcd-backup-ctl/: BUILD.bazel  main.go
cmd/etcd-dump/: BUILD.bazel  main.go
cmd/etcd-manager/: BUILD.bazel  main.go  main_test.go
cmd/etcd-manager-ctl/: BUILD.bazel  main.go
dev/: add-symlink.sh  build-assets.sh  download-etcd.sh  protoc  push-etcd-manager.sh  set-version.sh  tag-release.sh
dev/tasks/: build-images
docs/: release-process.md
images/etcd-manager-minimal/: Dockerfile
images/etcd-manager-static/: README.md
pkg/backup/: BUILD.bazel  store.go  vfs.go
pkg/backupcontroller/: BUILD.bazel  cleanup.go  controller.go
pkg/commands/: BUILD.bazel  store.go  vfs.go
pkg/contextutil/: BUILD.bazel
pkg/controller/: BUILD.bazel  commands.go  controller.go  etcdclusterstate.go  newcluster.go  peer.go  reconcile_configuration.go  replacement.go  replacement_test.go  restore.go  upgrade.go  utils.go
pkg/dns/: BUILD.bazel
pkg/etcd/: BUILD.bazel  backup.go  etcdprocess.go  etcdprocess_test.go  etcdserver.go  etcdserver_test.go  pki.go  pki_test.go  restore.go  tar.go
pkg/etcdclient/: BUILD.bazel  client.go
pkg/etcdversions/: BUILD.bazel  (+1 more)
pkg/static/: BUILD.bazel  commandstore.go  config.go  discovery.go
pkg/volumes/aws/: BUILD.bazel  discovery.go  volumes.go
tools/: get_workspace_status.sh
(+101 files in other folders)
