load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "aws",
    srcs = [
        "discovery.go",
        "volumes.go",
    ],
    importpath = "sigs.k8s.io/etcd-manager/pkg/volumes/aws",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/privateapi/discovery",
        "//pkg/volumes",
        "//vendor/github.com/aws/aws-sdk-go-v2/aws",
        "//vendor/github.com/aws/aws-sdk-go-v2/aws/transport/http",
        "//vendor/github.com/aws/aws-sdk-go-v2/config",
        "//vendor/github.com/aws/aws-sdk-go-v2/feature/ec2/imds",
        "//vendor/github.com/aws/aws-sdk-go-v2/service/ec2",
        "//vendor/github.com/aws/aws-sdk-go-v2/service/ec2/types",
        "//vendor/github.com/aws/smithy-go",
        "//vendor/k8s.io/klog/v2:klog",
        "//vendor/k8s.io/kops/util/pkg/awslog",
    ],
)
